Fix handling of relative-file storage and auto linking